# ts-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: args.rs  cargo.rs  main.rs  metadata.rs  path.rs
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: generic_fields.rs  generic_without_import.rs  generics.rs  lib.rs
macros/: Cargo.toml
macros/src/: deps.rs  lib.rs  utils.rs
macros/src/attr/: enum.rs  field.rs  mod.rs  struct.rs  variant.rs
macros/src/types/: enum.rs  named.rs  newtype.rs  tuple.rs  type_as.rs  type_override.rs  unit.rs
ts-gen/: Cargo.toml
ts-gen/src/: chrono.rs  error.rs  lib.rs  typelist.rs
ts-gen/src/export/: mod.rs  path.rs
