[package]
name = "cargo-ts-gen"
version = "1.0.2"
edition = "2021"
authors = ["Vlayd Detect"]
description = "A CLI Tool for automatically exporting Rust types to Typescript using ts-gen crate"
keywords = ["ts-gen", "cli"]
license = "MIT"

[[bin]]
name = "ts-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
