[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
ts-gen = { path = "../ts-gen", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
serde = { version = "1", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }