[package]
name = "ts-gen-macros"
version = "0.1.0"
edition = "2021"
authors = ["Vlayd Detect"]
description = "derive macro for ts-gen"
license = "MIT"

[features]
serde-compat = ["termcolor"]
no-serde-warnings = []
export = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
termcolor = { version = "1", optional = true }