[package]
name = "ts-gen"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Vlayd Detect"]
description = "generate typescript bindings from rust code"
keywords = ["typescript", "ts", "bindings", "ts-gen", "wasm"]
categories = [
    "development-tools::ffi",
    "development-tools::build-utils",
    "wasm",
    "web-programming",
]
license = "MIT"

[features]
default = ["serde-compat"]
serde-compat = ["ts-gen-macros/serde-compat"]
chrono-impl = ["chrono"]
bigdecimal-impl = ["bigdecimal"]
uuid-impl = ["uuid"]
bson-uuid-impl = ["bson"]
bytes-impl = ["bytes"]
url-impl = ["url"]
format = ["dprint-plugin-typescript"]
indexmap-impl = ["indexmap"]
ordered-float-impl = ["ordered-float"]
heapless-impl = ["heapless"]
semver-impl = ["semver"]
serde-json-impl = ["serde_json"]
export = ["ts-gen-macros/export"]
import-esm = []
generate-metadata = []

[dependencies]
ts-gen-macros = { version = "=1.0.0", path = "../macros" }
thiserror = "1"
chrono = { version = "0.4", optional = true }
bigdecimal = { version = ">= 0.0.13, < 0.5", features = [
    "serde",
], optional = true }
uuid = { version = "1", optional = true }
bson = { version = "2", optional = true }
bytes = { version = "1", optional = true }
url = { version = "2", optional = true }
dprint-plugin-typescript = { version = "0.90", optional = true }
indexmap = { version = "2", optional = true }
ordered-float = { version = ">= 3, < 5", optional = true }
heapless = { version = ">= 0.7, < 0.9", optional = true }
semver = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }